<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BQuiet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Events</item>
        <item >Create</item>
        <item >Map</item>        
        <item >New PassCode</item>
        <item >Bin</item>
        <item >Settings</item>
        <item >Info</item>        
    </string-array>
    
     <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item >@drawable/my_event</item>
        <item >@drawable/my_plus</item>
        <item >@drawable/my_map</item>        
        <item >@drawable/my_passcode</item>
        <item >@drawable/my_bin</item>
        <item >@drawable/my_settings</item>
        <item >@drawable/my_info</item>                        
    </array>
        
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    
    <!-- Messages -->
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="add_geofences_result_success">Add Geofences: Success GeofenceRequestIds %1$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds %2$s</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    
    
    <string name="remove_geofences_intent_failure">Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_intent_success">Removing all geofences succeeded.</string>
    
    <string name="remove_geofences_id_success">Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_id_failure">Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    
    <string name="geofence_transition_error_detail">Geofence transition error, code %1$d message %2$s.</string>
    
    <string name="geofence_transition_notification_title">%1$s Bquiet Fence(s)</string>
    
    <string name="geofence_transition_notification_text">Click notification to return to app</string>   
    
    
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    
    <!-- info needs -->
    <string name="app_intro">BQuiet is an application that makes life easy by its automated muting feature i.e., Silents the device based on time or location.</string>
    <string name="app_intro_desc">You have to define specific period of time or location to make the device quiet(silent).</string>
    <string name="app_howtouse">You can create an event in two ways,\n\nOne, you can create a time-event by defining the starting and stopping time.\n\nTwo, you can just tap on a location in map to create a fence-event.</string>
    <string name="app_features">- Active event will not eat your battery power.\n\n- You can make this app private using 4 digit numeric passcode.\n\n- If you need you can enable SMS for events.\n\n- You can create location based events too.</string>
    <string name="app_howitworks">Bquiet mutes the device on the defined time or by its location.\n\nIf you miss a phone call when an event is active Bquiet would send a SMS to the caller if you enabled \"Send SMS\" field during event creation.\n\nIf you enable \"Repeat\" field during time-event creation then the event will get repeated daily or else the event will die after its execution, however you can restore it from \"Bin\".\n\nBut the fence-event will exist forever, unless you remove the fence. You can\'t restore a fence-event after deletion.</string>
    <string name="app_note">Note:\n- If you change the device ringermode during event execution, will end the event.\n\n- Losing internet connection will terminate the active fence-event.\n\n- Map should be fully zoomed to create a fence.\n\n- Depending on the device\'s performance it may take few seconds to display the fence-pointer on tapping map.\n\n- Location accuracy depends on GPS, without it location may be inexact by few metres.\n\n- Depending on OS version firing or ending a time-event might be delayed by few seconds.\n\n- Google Play services is mandatory to create Fence-event.\n\n- Rebooting device may troubleshoot any problem associated with Fence-event.</string>
    <string name="app_bquiet_doesnot">- Modify any of your settings and data.\n\n- Track your location, since we don\'t have any location tracking / tracing algorithm in our source code. Your location is yours.\n\n- Access / upload any of your data because we don\'t have any cloud database.</string>    
    
</resources>