<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:id="@+id/INFO"        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"         
        android:fillViewport="true">
        
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent" >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BQuiet\nVersion 1.2.1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
        
        <TextView 
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_intro"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Reach me at :"
            tools:ignore="HardcodedText" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="writetobquiet@gmail.com"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
        
        
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="How to use?"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
            
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_intro_desc"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="How to create?"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
            tools:ignore="HardcodedText" />
            
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_howtouse"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="How it works:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_howitworks"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Features:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_features"/>
        
        <TextView 
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_note"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="BQuiet does not:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_bquiet_doesnot"/>
        
    </LinearLayout>
</RelativeLayout>
</ScrollView>